初始化 test_2 分支的提交

--- a/coder.html
+++ b/coder.html
@@ -1,109 +1,106 @@
 <!DOCTYPE HTML>
+<!--
+	Helios by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
-	<title>Profile Gallery - Helios by HTML5 UP</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body class="right-sidebar is-preload">
-	<div id="page-wrapper">
+	<head>
+		<title>Developers - WebGIS Switzerland</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="page-wrapper">
 
-		<!-- Header -->
-		<div id="header">
-			<div class="inner">
-				<header>
-					<h1><a href="index.html" id="logo">Developers</a></h1>
-				</header>
-			</div>
-			<nav id="nav">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-                    <li><a href="coder.html">Developers</a></li>
-					<li><a href="workflow.html">Workflow</a></li>
-					<li><a href="result.html">Results</a></li>
-					<li><a href="webgis.html">WebGIS</a></li>
-				</ul>
-			</nav>
-		</div>
-
-		<!-- Main Content -->
-		<div class="wrapper style1">
-			<div class="container">
-				<header class="major">
-					<h2>Team Members</h2>
-				</header>
-				<div class="row">
-					<div class="col-4 col-12-mobile">
-						<span class="image fit"><img src="images/member1.jpg" alt="Member 1" /></span>
-						<h3>Jane Doe</h3>
-						<p style="margin-left: 30px;">USA</p>
-						<p><a href="mailto:jane.doe@example.com">jane.doe@example.com</a></p>
-					</div>
-					<div class="col-4 col-12-mobile">
-						<span class="image fit"><img src="images/member2.jpg" alt="Member 2" /></span>
-						<h3>John Smith</h3>
-						<p style="margin-left: 30px;">UK</p>
-						<p><a href="mailto:john.smith@example.com">john.smith@example.com</a></p>
-					</div>
-					<div class="col-4 col-12-mobile">
-						<span class="image fit"><img src="images/member3.jpg" alt="Member 3" /></span>
-						<h3>Sun Yingbo</h3>
-                        <p style="margin-left: 30px;">China</p>
-                        <p><a href="mailto:yingbo.sun@mail.polimi.it">yingbo.sun@mail.polimi.it</a></p>
-
-					</div>
+			<!-- Header -->
+			<div id="header">
+				<div class="inner">
+					<header>
+						<h1><a href="index.html" id="logo">Developers</a></h1>
+					</header>
 				</div>
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="coder.html">Developers</a></li>
+						<li><a href="workflow.html">Workflow</a></li>
+						<li><a href="result.html">Results</a></li>
+						<li><a href="webgis.html">WebGIS</a></li>
+					</ul>
+				</nav>
 			</div>
-		</div>
-        <!-- Footer -->
-		<div id="footer">
-			<div class="container">
-				<hr />
-				<div class="row">
-					<div class="col-12">
 
-						<!-- Contact -->
-						<section class="contact">
-							<header>
-								<h3>webgis</h3>
-							</header>
-							<p>webgis</p>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-							</ul>
-						</section>
-
-						<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved.</li>
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
+			<!-- Main Content -->
+			<div class="wrapper style1">
+				<div class="container">
+					<header class="major">
+						<h2>Team Members</h2>
+					</header>
+					<div class="row">
+						<div class="col-4 col-12-mobile">
+							<span class="image fit"><img src="images/member1.jpg" alt="Member 1" /></span>
+							<h3>Jane Doe</h3>
+							<p style="margin-left: 30px;">USA</p>
+							<p><a href="mailto:jane.doe@example.com">jane.doe@example.com</a></p>
 						</div>
-
+						<div class="col-4 col-12-mobile">
+							<span class="image fit"><img src="images/member2.jpg" alt="Member 2" /></span>
+							<h3>John Smith</h3>
+							<p style="margin-left: 30px;">UK</p>
+							<p><a href="mailto:john.smith@example.com">john.smith@example.com</a></p>
+						</div>
+						<div class="col-4 col-12-mobile">
+							<span class="image fit"><img src="images/member3.jpg" alt="Member 3" /></span>
+							<h3>Sun Yingbo</h3>
+							<p style="margin-left: 30px;">China</p>
+							<p><a href="mailto:yingbo.sun@mail.polimi.it">yingbo.sun@mail.polimi.it</a></p>
+						</div>
 					</div>
 				</div>
 			</div>
+
+			<!-- Footer -->
+			<div id="footer">
+				<div class="container">
+					<hr />
+					<div class="row" style="display: flex; align-items: center; justify-content: space-between; margin: 0 auto; max-width: 1000px;">
+						<div class="col-6 text-center" style="padding: 0 30px;">
+							<!-- Polimi Logo Link -->
+							<a href="https://www.polimi.it/" target="_blank">
+								<img src="images/polimi.jpg" alt="Politecnico di Milano" style="width: 350px; max-width: 100%;">
+							</a>
+						</div>
+						<div class="col-6 text-center" style="padding: 0 30px;">
+							<!-- Contact Section -->
+							<section class="contact">
+								<header>
+									<h2 style="font-size: 2em; margin-bottom: 20px;">Contact</h2>
+								</header>
+								<ul style="list-style-type: none; padding: 0; margin: 0;">
+									<li style="margin-bottom: 10px;"><a href="mailto:contact@example.com" style="font-size: 1.2em;">contact@example.com</a></li>
+									<li style="margin-bottom: 10px;"><a href="mailto:info@example.com" style="font-size: 1.2em;">info@example.com</a></li>
+									<li style="margin-bottom: 10px;"><a href="mailto:support@example.com" style="font-size: 1.2em;">support@example.com</a></li>
+								</ul>
+							</section>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
-	</div>
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.dropotron.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-
-</body>
+	</body>
 </html>
