--- a/index.html
+++ b/index.html
@@ -53,39 +53,49 @@
 					</header>
 				</section>
 
-			
+				<!-- Content Section with Image and Video -->
+				<section class="wrapper style2">
+					<div class="container">
+						<div class="row gtr-200">
+							<div class="col-6 col-12-mobile">
+								<!-- Image placeholder (you'll add your image later) -->
+								<div class="image fit" style="min-height: 315px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center;">
+									<p>Image placeholder</p>
+								</div>
+							</div>
+							<div class="col-6 col-12-mobile">
+								<!-- YouTube Video Embed -->
+								<div class="video-container">
+									<iframe width="100%" height="315" src="https://www.youtube.com/embed/CvrSoObs5jo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 
 			<!-- Footer -->
 		<div id="footer">
 			<div class="container">
 				<hr />
-				<div class="row">
-					<div class="col-12">
-
-						<!-- Contact -->
+				<div class="row" style="display: flex; align-items: center; justify-content: space-between; margin: 0 auto; max-width: 1000px;">
+					<div class="col-6 text-center" style="padding: 0 30px;">
+						<!-- Polimi Logo Link -->
+						<a href="https://www.polimi.it/" target="_blank">
+							<img src="images/polimi.jpg" alt="Politecnico di Milano" style="width: 350px; max-width: 100%;">
+						</a>
+					</div>
+					<div class="col-6 text-center" style="padding: 0 30px;">
+						<!-- Contact Section -->
 						<section class="contact">
 							<header>
-								<h3>webgis</h3>
+								<h2 style="font-size: 2em; margin-bottom: 20px;">Contact</h2>
 							</header>
-							<p>webgis</p>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+							<ul style="list-style-type: none; padding: 0; margin: 0;">
+								<li style="margin-bottom: 10px;"><a href="mailto:contact@example.com" style="font-size: 1.2em;">contact@example.com</a></li>
+								<li style="margin-bottom: 10px;"><a href="mailto:info@example.com" style="font-size: 1.2em;">info@example.com</a></li>
+								<li style="margin-bottom: 10px;"><a href="mailto:support@example.com" style="font-size: 1.2em;">support@example.com</a></li>
 							</ul>
 						</section>
-
-						<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved.</li>
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-
 					</div>
 				</div>
 			</div>
