--- a/webgis.html
+++ b/webgis.html
@@ -40,6 +40,33 @@
     </div>
   </div>
 
+  <!-- Footer -->
+  <div id="footer">
+    <div class="container">
+      <hr />
+      <div class="row" style="display: flex; align-items: center; justify-content: space-between; margin: 0 auto; max-width: 1000px;">
+        <div class="col-6 text-center" style="padding: 0 30px;">
+          <!-- Polimi Logo Link -->
+          <a href="https://www.polimi.it/" target="_blank">
+            <img src="images/polimi.jpg" alt="Politecnico di Milano" style="width: 350px; max-width: 100%;">
+          </a>
+        </div>
+        <div class="col-6 text-center" style="padding: 0 30px;">
+          <!-- Contact Section -->
+          <section class="contact">
+            <header>
+              <h2 style="font-size: 2em; margin-bottom: 20px;">Contact</h2>
+            </header>
+            <ul style="list-style-type: none; padding: 0; margin: 0;">
+              <li style="margin-bottom: 10px;"><a href="mailto:contact@example.com" style="font-size: 1.2em;">contact@example.com</a></li>
+              <li style="margin-bottom: 10px;"><a href="mailto:info@example.com" style="font-size: 1.2em;">info@example.com</a></li>
+              <li style="margin-bottom: 10px;"><a href="mailto:support@example.com" style="font-size: 1.2em;">support@example.com</a></li>
+            </ul>
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!--Scripts-->
   <script src="assets/js/jquery.min.js"></script>
