--- a/workflow.html
+++ b/workflow.html
@@ -45,33 +45,25 @@
 		<div id="footer">
 			<div class="container">
 				<hr />
-				<div class="row">
-					<div class="col-12">
-
-						<!-- Contact -->
+				<div class="row" style="display: flex; align-items: center; justify-content: space-between; margin: 0 auto; max-width: 1000px;">
+					<div class="col-6 text-center" style="padding: 0 30px;">
+						<!-- Polimi Logo Link -->
+						<a href="https://www.polimi.it/" target="_blank">
+							<img src="images/polimi.jpg" alt="Politecnico di Milano" style="width: 350px; max-width: 100%;">
+						</a>
+					</div>
+					<div class="col-6 text-center" style="padding: 0 30px;">
+						<!-- Contact Section -->
 						<section class="contact">
 							<header>
-								<h3>webgis</h3>
+								<h2 style="font-size: 2em; margin-bottom: 20px;">Contact</h2>
 							</header>
-							<p>webgis</p>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+							<ul style="list-style-type: none; padding: 0; margin: 0;">
+								<li style="margin-bottom: 10px;"><a href="mailto:contact@example.com" style="font-size: 1.2em;">contact@example.com</a></li>
+								<li style="margin-bottom: 10px;"><a href="mailto:info@example.com" style="font-size: 1.2em;">info@example.com</a></li>
+								<li style="margin-bottom: 10px;"><a href="mailto:support@example.com" style="font-size: 1.2em;">support@example.com</a></li>
 							</ul>
 						</section>
-
-						<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved.</li>
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-
 					</div>
 				</div>
 			</div>
